--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Automação Relatório</title>
 </head>
 <body>
+    <div id="cabecalho">
+        <img src="img/decalquesDetranCerto.jpg" alt="cabeçalho">
+    </div>
     <main>
         <div class="inp_info" id="div_P">
             <!--<p>Informe a Data</p>
@@ -35,7 +38,7 @@
         </div>
     </main>
     <div id="ass">
-        
+        <img src="img/assinatura.jpg" alt="assinatura">
     </div>
 </body>
 </html>
